--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   },
   "dependencies": {
     "body-parser": "^1.20.3",
-    "express": "^4.21.0"
+    "ejs": "^3.1.10",
+    "express": "^4.21.0",
+    "express-handlebars": "3.0",
+    "pug": "^3.0.3"
   }
 }
